<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.el_project.EditTaskActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/text"
        android:title="@string/bar"
        android:titleTextColor="@color/colorWhite"></Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task2"
            style="@style/main2text" />

        <EditText
            android:id="@+id/task_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line">
    </View>

    <LinearLayout
        android:id="@+id/layout_limit"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time2"
            style="@style/main2text"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp">

            <Spinner
                android:id="@+id/hour_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/hour_list"
                android:layout_gravity="center_vertical"></Spinner>
            <!--<EditText-->
                <!--android:id="@+id/assumed_time_et1"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:inputType="number"-->
                <!--android:textAlignment="center" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <!--<EditText-->
                <!--android:id="@+id/assumed_time_et2"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:inputType="number"-->
                <!--android:textAlignment="center" />-->

            <Spinner
                android:id="@+id/minute_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/minute_list"
                android:layout_gravity="center_vertical"></Spinner>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line">
    </View>

    <RelativeLayout
        android:id="@+id/selectTime"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/ddl2"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/ddlTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:gravity="center"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/lightblue"
            android:textSize="15sp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance2"
            style="@style/main2text"/>

        <!--<ImageView-->
            <!--android:id="@+id/circle_back"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--android:scaleType="center"-->
            <!--android:src="@drawable/circle_animation"-->
            <!--android:layout_gravity="center_vertical"/>-->

        <ImageView
            android:id="@+id/circle_one"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="70dp"
            android:scaleType="center"
            android:src="@drawable/circle_animation" />

        <ImageView
            android:id="@+id/circle_two"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="center"
            android:src="@drawable/circle_animation"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

        <ImageView
            android:id="@+id/circle_three"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="center"
            android:src="@drawable/circle_animation"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

        <ImageView
            android:id="@+id/circle_four"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="center"
            android:src="@drawable/circle_animation"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

        <ImageView
            android:id="@+id/circle_five"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="center"
            android:src="@drawable/circle_animation"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday2"
            style="@style/main2text"/>

        <Switch
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="110dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit2"
            style="@style/main2text"/>

        <EditText
            android:id="@+id/comment_et"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/finish_editing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color1"
                android:text="@string/add2"
                android:textSize="20dp" />

            <Button
                android:id="@+id/start_now"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color1"
                android:text="@string/begin2"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
