<?xml version="1.0" encoding="utf-8"?>
<!--抽屉布局，计时及设置界面-->
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".TaskTimingActivity">


<!--计时界面-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<android.support.v7.widget.Toolbar
			android:id="@+id/setting_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
			app:title="@string/task2"/>
		<!--TODO:待改动显示内容-->

		<!--在这里写界面-->

		<RelativeLayout
			android:layout_width="300dp"
			android:layout_height="300dp"
			android:background="@drawable/doing_task"
			android:layout_gravity="center">

			<TextView
				android:id="@+id/time_action"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="00:00"
				style="@style/doingtask"
				android:layout_centerVertical="true"
				android:layout_centerHorizontal="true"/>

			<TextView
				android:id="@+id/time_left"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/time3"
				android:textSize="20dp"
				android:textColor="@color/color4"
				android:layout_below="@id/time_action"
				android:layout_centerHorizontal="true"/>
		</RelativeLayout>
<!--三个按钮-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:orientation="horizontal"
			android:layout_marginTop="10dp">

			<ImageButton
				android:id="@+id/give_up_button"
				style="@style/imagebutton"
				android:background="@drawable/giveup_watercolor" />

			<ImageButton
				android:id="@+id/pause_button"
				style="@style/imagebutton"
				android:background="@drawable/stop_watercolor" />

			<ImageButton
				android:id="@+id/finish_button"
				style="@style/imagebutton"
				android:background="@drawable/end_watercolor" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:id="@+id/layout_remark"
				android:layout_width="wrap_content"
				android:layout_height="90dp"
				android:layout_gravity="bottom"
				android:orientation="vertical">

				<View
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:background="@color/split_line">
				</View>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/edit2"
					android:textSize="20dp"
					android:textColor="@color/pink"
					android:layout_marginLeft="30dp"/>

				<TextView
					android:id="@+id/edit_remark"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/edit3"
					android:layout_marginLeft="40dp"
					android:layout_marginTop="5dp"
					android:layout_marginRight="20dp"
					android:maxEms="35"
					android:ellipsize="end"
					android:singleLine="true"/>

			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<!--右侧布局-->
	<RelativeLayout
		android:id="@+id/left_drawer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="end"
		android:background="#FFF">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<RelativeLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="180dp"
				android:padding="10dp"
				android:background="?attr/colorPrimary">

				<de.hdodenhof.circleimageview.CircleImageView
					android:id="@+id/icon_image"
					android:layout_width="70dp"
					android:layout_height="70dp"
					android:src="@drawable/set_white"
					android:layout_centerInParent="true"/>
			</RelativeLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:orientation="horizontal">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<ImageView
						android:id="@+id/img_if_music_on"
						android:layout_width="18dp"
						android:layout_height="18dp"
						android:layout_margin="4dp"
						android:scaleType="center"
						android:background="@drawable/music_slight_big" />

					<TextView
						android:id="@+id/text_if_music_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="30dp"
						android:scaleType="center"
						android:text="@string/string_if_music_on"
						android:textSize="18sp"/>

					<Switch
						android:id="@+id/switch_if_music_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:textOff=""
						android:textOn="" />
				</RelativeLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:orientation="horizontal">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<ImageView
						android:id="@+id/img_if_tomato_clock_on"
						android:layout_width="18dp"
						android:layout_height="18dp"
						android:layout_margin="4dp"
						android:scaleType="center"
						android:background="@drawable/clock"/>

					<TextView
						android:id="@+id/text_if_tomato_clock_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="30dp"
						android:text="@string/string_if_tomato_clock_on"
						android:textSize="18sp"/>

					<Switch
						android:id="@+id/switch_if_tomato_clock_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:textOff=""
						android:textOn="" />
				</RelativeLayout>
			</LinearLayout>


		</LinearLayout>
	</RelativeLayout>

</android.support.v4.widget.DrawerLayout>