<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/activity_main_drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background1">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:app="http://schemas.android.com/apk/res-auto"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">

	    <android.support.v7.widget.Toolbar
	        android:id="@+id/title_toolbar"
	        android:layout_width="match_parent"
	        android:layout_height="?actionBarSize"
	        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
	        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

	    <!--插入滚动-->

	    <android.support.v7.widget.RecyclerView
	        android:id="@+id/recycler_view"
	        android:layout_marginTop="?attr/actionBarSize"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:dividerHeight="10dip"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_alignParentEnd="true"
				android:layout_alignParentBottom="true">

				<android.support.design.widget.FloatingActionButton
					android:id="@+id/fab_delete"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="40dp"
					android:layout_marginEnd="16dp"
					android:layout_marginBottom="6dp"
					android:src="@mipmap/delete_white"/>

				<android.support.design.widget.FloatingActionButton
					android:id="@+id/fab_detail"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					android:layout_marginBottom="6dp"
					android:src="@mipmap/text"/>

				<android.support.design.widget.FloatingActionButton
					android:id="@+id/fab_start"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					android:layout_marginBottom="6dp"
					android:src="@mipmap/start"/>

				<android.support.design.widget.FloatingActionButton
					android:id="@+id/fab_base"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					android:layout_marginBottom="16dp"
					android:src="@mipmap/add_white"/>

			</LinearLayout>


		</RelativeLayout>


	</RelativeLayout>

	<!--右侧布局-->
	<RelativeLayout
		android:id="@+id/activity_task_timing_setting_drawer"
		android:layout_width="230dp"
		android:layout_height="match_parent"
		android:layout_gravity="end"
		android:background="#FFF">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<RelativeLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/activity_main_setting_upper"
				android:layout_width="match_parent"
				android:layout_height="150dp"
				android:padding="10dp">

				<de.hdodenhof.circleimageview.CircleImageView
					android:id="@+id/icon_image"
					android:layout_width="70dp"
					android:layout_height="70dp"
					android:src="@drawable/set_white"
					android:layout_centerInParent="true"/>
			</RelativeLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:orientation="horizontal">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<ImageView
						android:id="@+id/img_if_music_on"
						android:layout_width="18dp"
						android:layout_height="18dp"
						android:layout_margin="4dp"
						android:scaleType="center"
						android:background="@drawable/music_slight_big" />

					<TextView
						android:id="@+id/text_if_music_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="30dp"
						android:scaleType="center"
						android:text="@string/string_if_music_on"
						android:textSize="18sp"/>

					<Switch
						android:id="@+id/switch_if_music_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true" />
				</RelativeLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:orientation="horizontal">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<ImageView
						android:id="@+id/img_if_tomato_clock_on"
						android:layout_width="18dp"
						android:layout_height="18dp"
						android:layout_margin="4dp"
						android:scaleType="center"
						android:background="@drawable/clock"/>

					<TextView
						android:id="@+id/text_if_tomato_clock_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="30dp"
						android:text="@string/string_if_tomato_clock_on"
						android:textSize="18sp"/>

					<Switch
						android:id="@+id/switch_if_tomato_clock_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true" />
				</RelativeLayout>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:orientation="horizontal">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/text_clock_on"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="30dp"
						android:text="@string/string_tomato_clock_on"
						android:textSize="18sp"
						android:visibility="gone"/>


					<Spinner
						android:id="@+id/spinner_choose_time"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:entries="@array/times"
						android:visibility="gone"></Spinner>


				</RelativeLayout>
			</LinearLayout>


		</LinearLayout>
	</RelativeLayout>

</android.support.v4.widget.DrawerLayout>